specification/specs/common_abstractions/response/ResponseBase.ts
class ResponseBase implements IResponse {
  // error: MainError;
  // status: integer;
}
